--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,18 @@
-html, body {
-	margin: 0;	
+html,
+body {
+	margin: 0;
 	padding: 0;
 }
 
+@import url(https://fonts.googleapis.com/css?family=Fjalla+One);
+
+html {
+	height: 100%;
+}
+
 body {
-	background: #171717;
-	color: #999;
-	font: 100%/18px helvetica, arial, sans-serif;
-  overflow: hidden;
+	font-family: "Fjalla One", sans-serif;
+	background: linear-gradient(to bottom, #405166 0%, #656f6f 100%);
 }
 
 a {
@@ -17,17 +22,17 @@ a {
 }
 
 a:hover {
-	color: #fff;	
+	color: #fff;
 }
 
 #canvas-container {
 	margin: -auto 0 0 auto;
 	position: absolute;
-  width: 100%;
-	height:800px;
+	width: 100%;
+	height: 800px;
 	z-index: 2;
 }
-		
+
 canvas {
 	cursor: crosshair;
 	display: block;
@@ -40,86 +45,79 @@ canvas:active {
 }
 
 
-
 #gui {
 	right: 0;
 	position: fixed;
 	top: 0;
 	z-index: 3;
-  display:none;
+	display: none;
 }
 
-
-@import url(https://fonts.googleapis.com/css?family=Fjalla+One);
-html {
-  height: 100%;
-}
-
-body {
-  font-family: "Fjalla One", sans-serif;
-  background: linear-gradient(to bottom, #405166 0%, #656f6f 100%);
-}
 
 .container {
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50%;
-  display: block;
-  position: absolute;
-  max-width: 225px;
+	transform: translate(-50%, -50%);
+	top: 50%;
+	left: 50%;
+	display: block;
+	position: absolute;
+	max-width: 225px;
 }
 
 .button {
-  float: left;
-  position: relative;
-  bottom: -65px;
-  left: 50%;
-  transform: translateX(-50%) rotate(-10deg);
-  color: #e55643;
-  text-transform: uppercase;
-  opacity: 0;
-  visibility: hidden;
-  cursor: pointer;
-}
-.button span {
-  transform: skew(-10deg);
-  display: block;
-  float: left;
-  text-shadow: #533d4a 1px 1px, #533d4a 2px 2px, #533d4a 3px 3px, #533d4a 4px 4px;
+	float: left;
+	position: relative;
+	bottom: -65px;
+	left: 50%;
+	transform: translateX(-50%) rotate(-10deg);
+	color: #e55643;
+	text-transform: uppercase;
+	opacity: 0;
+	visibility: hidden;
+	cursor: pointer;
 }
 
-	h1 {
-    color: #fff;
-    text-transform: uppercase;
-    font-size: 40px;
-    margin: 0;
-    line-height: 47px;
-    letter-spacing: 1px;
+.button span {
+	transform: skew(-10deg);
+	display: block;
+	float: left;
+	text-shadow: #533d4a 1px 1px, #533d4a 2px 2px, #533d4a 3px 3px, #533d4a 4px 4px;
+}
+
+h1 {
+	color: #fff;
+	text-transform: uppercase;
+	font-size: 40px;
+	margin: 0;
+	line-height: 47px;
+	letter-spacing: 1px;
 }
 
 .title {
-  transform: translateX(-50%) rotate(-10deg);
-  display: block;
-  float: left;
-  left: 50%;
-  position: relative;
+	transform: translateX(-50%) rotate(-10deg);
+	display: block;
+	float: left;
+	left: 50%;
+	position: relative;
 }
+
 .title span {
-  transform: skew(-10deg);
-  display: block;
-  float: left;
-  text-shadow: #533d4a 1px 1px, #533d4a 2px 2px, #533d4a 3px 3px, #533d4a 4px 4px, #533d4a 5px 5px, #533d4a 6px 6px;
-  min-width: 10px;
-  min-height: 10px;
-  position: relative;
+	transform: skew(-10deg);
+	display: block;
+	float: left;
+	text-shadow: #533d4a 1px 1px, #533d4a 2px 2px, #533d4a 3px 3px, #533d4a 4px 4px, #533d4a 5px 5px, #533d4a 6px 6px;
+	min-width: 10px;
+	min-height: 10px;
+	position: relative;
 }
 
 .title:nth-child(1) {
-  color: #e55643;
+	color: #e55643;
 }
+
 .title:nth-child(2) {
-  color: #2b9f5e;
+	color: #2b9f5e;
 }
+
 .title:nth-child(3) {
-  color: #f1c83c;
+	color: #f1c83c;
 }
