--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,8 @@ html {
 body {
 	font-family: "Fjalla One", sans-serif;
 	background: linear-gradient(to bottom, #405166 0%, #656f6f 100%);
+	  overflow: hidden;
+
 }
 
 a {
